--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,9 @@ services:
     build: .
     image: index.docker.io/oaklabs/component-shutdown:latest
     network_mode: host
-    devices:
-      - /dev/dri
-    volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix
-      - /dev/shm:/dev/shm
-      - ./src:/app/src
     environment:
-      - NODE_ENV=development
-      - PLATFORM_HOST=192.168.0.66:443
+      NODE_ENV: 'development'
+      PLATFORM_HOST: '192.168.0.66:443'
+      SHUTDOWN_TIME: '0 0 18 * * *'
+      TZ: 'America/Los_Angeles'
   
