--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "dev": "$(cat .env | xargs) npm start",
+    "dev": "npm start",
     "rebuild": "rm -rf node_modules/ package-lock.json && npm install",
     "test": "exit 0;"
   },
